# mathnotebooks

./: LICENSE  pyproject.toml  requirements.txt  setup.cfg
notebooks/prealgebra/: prealgebra.ipynb  prealgebra.py
prealgebra/: prealgebra.ipynb  prealgebra.py  utils.py
src/billsixmathnotebooks/prealgebra/: utils.py
test/: test.ipynb  test.py  utils.py
tests/prealgebra/: test_utils.py
